# skill-boost-ide-configuration

./: README.md  main.py  pyproject.toml  utils.py
.devcontainer/: Dockerfile  devcontainer.json
1-python-versions/: README.md  app.py
2-virtual-environments/: README.md
3-debugging/: test_utils.py
5-pre-commit-hooks/: README.md  config.py
6-notebooks/: README.md  plot.ipynb
