[tool.poetry]
name = "pandas-debug"
version = "0.1.0"
description = ""
authors = ["Gergely Soti <gergely.soti@dataminded.be>"]
readme = "README.md"
packages = [{include = "pandas_debug"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
